--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="%PUBLIC_URL%">
   <meta property="og:type" content="website">
   <meta property="og:title" content="%REACT_APP_NAME%">
-  <meta property="og:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
+  <meta property="og:image" content="../src/assets/img/logo/cm-logo-web.png">
   <meta property="og:description" content="%REACT_APP_DESCRIPTION%">
   <meta property="og:site_name" content="%REACT_APP_NAME%">
 
@@ -24,7 +24,7 @@
   <meta name="twitter:url" content="%PUBLIC_URL%">
   <meta name="twitter:title" content="%REACT_APP_NAME%">
   <meta name="twitter:description" content="%REACT_APP_DESCRIPTION%">
-  <meta name="twitter:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
+  <meta name="twitter:image" content="../src/assets/img/logo/cm-logo-web.png">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
